# backend-api-client

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml
api/: __main__.py
api/configs/: fastapi.py
api/endpoints/: auth.py  characters.py  messages.py  users.py
api/schemas/: auth.py  characters.py  common.py  messages.py  users.py
api/services/: auth.py  characters.py  messages.py  users.py
api/utils/: formatter.py
migration/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
migration/database/: env.py
migration/database/models/: __init__.py  characters.py  messages.py  users.py
migration/database/versions/: 2023-01-17-2fc6d90df54d_.py  2023-01-17-37a627ab709b_.py  2023-01-17-beb11a35dbfd_.py  2023-01-17-d6d73fc8d749_.py  2023-01-18-67d5b84f9b6f_.py
