[tool.poetry]
name = "backend-migrations"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]
readme = "README.md"
packages = [{include = "backend_migrations"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.46"}
alembic = "^1.9.2"
pydantic = "^1.10.4"
pytz = "^2022.7.1"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
